Fix https://issues.apache.org/bugzilla/show_bug.cgi?id=55749 Improve the error message when SSLEngine is disabled in AprLifecycleListener and SSL is configured for an APR/native connector.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1556541 13f79535-47bb-0310-9956-ffa450edef68

--- a/java/org/apache/tomcat/util/net/res/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/net/res/LocalStrings.properties
@@ -48,4 +48,6 @@ endpoint.warn.noHonorCipherOrder='Honor cipher order' option is not supported by
 endpoint.debug.channelCloseFail=Failed to close channel
 endpoint.debug.socketCloseFail=Failed to close socket
 endpoint.apr.noSslCertFile=Connector attribute SSLCertificateFile must be defined when using SSL with APR
+endpoint.apr.failSslContextMake=Unable to create SSLContext. Check that SSLEngine is enabled in the AprLifecycleListener, the AprLifecycleListener has initialised correctly and that a valid SSLProtocol has been specified
 endpoint.apr.invalidSslProtocol=An invalid value [{0}] was provided for the SSLProtocol attribute
+endpoint.apr.previousInitFailed=Unable to initialise endpoint. A previous call to init() failed. See previous log messages for details.
