--- a/build.xml
+++ b/build.xml
@@ -306,7 +306,9 @@
 
     <!-- Servlet 2.5 Implementation JAR File -->
     <jarIt jarfile="${servlet-api.jar}" filesId="files.servlet-api"
-      manifest="${tomcat.manifests}/servlet-api.jar.manifest" />
+      manifest="${tomcat.manifests}/servlet-api.jar.manifest"
+      license="${tomcat.manifests}/servlet-api.jar.license"
+      notice="${tomcat.manifests}/servlet-api.jar.notice" />
 
     <!-- JSP 2.1 Implementation JAR File -->
     <jarIt jarfile="${jsp-api.jar}" filesId="files.jsp-api"
