--- a/build.xml
+++ b/build.xml
@@ -177,6 +177,8 @@
     <include name="javax/servlet/*" />
     <include name="javax/servlet/http/*" />
     <include name="javax/servlet/resources/*" />
+    <include name="javax/servlet/jsp/resoucres/*" />
+    <exclude name="javax/servlet/jsp/resoucres/jspxml*" />
   </patternset>
 
   <patternset id="files.jsp-api">
