Fix error when running in strict servlet compliance mode with Java 5. See "Tagging 6.0.39" thread on dev list. By the way, it fixes https://issues.apache.org/bugzilla/show_bug.cgi?id=55166
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1561625 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -159,6 +159,13 @@
         <include name="**/*.xml"/>
       </fileset>
     </copy>
+    <!-- Copy JSP Schemas and DTDs to be packed into servlet-api.jar -->
+    <copy todir="${tomcat.classes}/javax/servlet/resources" encoding="ISO-8859-1">
+      <fileset dir="${tomcat.classes}/javax/servlet/jsp/resources">
+        <include name="*" />
+        <exclude name="jspxml*" />
+      </fileset>
+    </copy>
 
   </target>
 
@@ -177,8 +184,6 @@
     <include name="javax/servlet/*" />
     <include name="javax/servlet/http/*" />
     <include name="javax/servlet/resources/*" />
-    <include name="javax/servlet/jsp/resources/*" />
-    <exclude name="javax/servlet/jsp/resources/jspxml*" />
   </patternset>
 
   <patternset id="files.jsp-api">
