Fix https://issues.apache.org/bugzilla/show_bug.cgi?id=56275 Fix memory leak if a Filter throws an exception during its destroy() method
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1580479 13f79535-47bb-0310-9956-ffa450edef68

--- a/java/org/apache/catalina/core/LocalStrings.properties
+++ b/java/org/apache/catalina/core/LocalStrings.properties
@@ -31,6 +31,7 @@ applicationDispatcher.specViolation.response=Original SevletResponse or wrapped 
 applicationFilterConfig.jmxRegisterFail=JMX registration failed for filter of type [{0}] and name [{1}]
 applicationFilterConfig.jmxUnregister=JMX de-registration complete for filter of type [{0}] and name [{1}]
 applicationFilterConfig.jmxUnregisterFail=JMX de-registration failed for filter of type [{0}] and name [{1}]
+applicationFilterConfig.release=Failed to destroy the filter named [{0}] of type [{1}]
 applicationRequest.badParent=Cannot locate parent Request implementation
 applicationRequest.badRequest=Request is not a javax.servlet.ServletRequestWrapper
 applicationResponse.badParent=Cannot locate parent Response implementation
