--- a/java/org/apache/catalina/core/LocalStrings.properties
+++ b/java/org/apache/catalina/core/LocalStrings.properties
@@ -197,6 +197,7 @@ standardServer.initialize.initialized=This server has already been initialized
 standardServer.start.connectors=At least one connector is not associated with any container
 standardServer.start.started=This server has already been started
 standardServer.stop.notStarted=This server has not yet been started
+standardServer.accept.timeout=The socket listening for the shutdown command experienced an unexpected timeout [{0}] milliseconds after the call to accept(). Is this an instance of bug 56684?
 standardService.connector.initFailed=Failed to initialize connector [{0}]
 standardService.connector.pauseFailed=Failed to pause connector [{0}]
 standardService.connector.startFailed=Failed to start connector [{0}]
