Fix https://issues.apache.org/bugzilla/show_bug.cgi?id=56988 Allow to use relative path in <code>base.path</code> setting when building Tomcat.
Tested with Ant 1.8.0.

Motivation: Allow to simplify configuration of automated CI tools that may run in different environments, e.g. Buildbot.

git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1632761 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -827,9 +827,7 @@
       <param name="destfile" value="${commons-dbcp.home}/build.xml" />
     </antcall>
     <mkdir dir="${tomcat-dbcp.home}"/>
-    <antcall target="build-tomcat-dbcp">
-      <param name="basedir" value="${tomcat-dbcp.home}" />
-    </antcall>
+    <antcall target="build-tomcat-dbcp" />
 
     <!-- Download JDT (Eclipse compiler) -->
     <antcall target="downloadfile-2">
