--- a/java/javax/servlet/http/LocalStrings.properties
+++ b/java/javax/servlet/http/LocalStrings.properties
@@ -20,7 +20,7 @@ err.cookie_name_is_token=Cookie name \"{0}\" is a reserved token
 err.io.negativelength=Negative Length given in write method
 err.io.short_read=Short Read
 
-http.method_not_implemented=Method {0} is not is not implemented by this servlet for this URI 
+http.method_not_implemented=Method {0} is not implemented by this servlet for this URI 
 
 http.method_get_not_supported=HTTP method GET is not supported by this URL
 http.method_post_not_supported=HTTP method POST is not supported by this URL
