Align org.apache.tomcat.jni with 7.0.x and 8.0.x Backport improvements to AprLifecycleListener
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1694294 13f79535-47bb-0310-9956-ffa450edef68

--- a/java/org/apache/catalina/core/LocalStrings.properties
+++ b/java/org/apache/catalina/core/LocalStrings.properties
@@ -37,6 +37,7 @@ applicationRequest.badRequest=Request is not a javax.servlet.ServletRequestWrapp
 applicationResponse.badParent=Cannot locate parent Response implementation
 applicationResponse.badResponse=Response is not a javax.servlet.ServletResponseWrapper
 aprListener.aprInit=The APR based Apache Tomcat Native library which allows optimal performance in production environments was not found on the java.library.path: {0}
+aprListener.aprInitError=The APR based Apache Tomcat Native library failed to load. The error reported was [{0}]
 aprListener.tcnInvalid=An incompatible version {0} of the APR based Apache Tomcat Native library is installed, while Tomcat requires version {1} 
 aprListener.tcnVersion=An older version {0} of the APR based Apache Tomcat Native library is installed, while Tomcat recommends version greater than {1}
 aprListener.aprDestroy=Failed shutdown of APR based Apache Tomcat Native library
