--- a/java/org/apache/catalina/core/RestrictedServlets.properties
+++ b/java/org/apache/catalina/core/RestrictedServlets.properties
@@ -17,3 +17,4 @@ org.apache.catalina.ssi.SSIServlet=restricted
 org.apache.catalina.servlets.CGIServlet=restricted
 org.apache.catalina.servlets.InvokerServlet=restricted
 org.apache.catalina.manager.JMXProxyServlet=restricted
+org.apache.catalina.manager.StatusManagerServlet=restricted
