--- a/java/org/apache/catalina/connector/LocalStrings.properties
+++ b/java/org/apache/catalina/connector/LocalStrings.properties
@@ -20,6 +20,7 @@
 coyoteConnector.alreadyInitialized=The connector has already been initialized
 coyoteConnector.alreadyStarted=The connector has already been started
 coyoteConnector.cannotRegisterProtocol=Cannot register MBean for the Protocol
+coyoteConnector.invalidPort=The connector cannot start since the specified port value of [{0}] is invalid
 coyoteConnector.notStarted=Coyote connector has not been started
 coyoteConnector.protocolHandlerDestroyFailed=Protocol handler destroy failed: {0}
 coyoteConnector.protocolHandlerInitializationFailed=Protocol handler initialization failed: {0}
