Clarify behaviour of Manager.context
Note: This does not impact Context.manager

A Manager can only be used with a single Context and must then be destroyed when no longer required

git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1727159 13f79535-47bb-0310-9956-ffa450edef68

--- a/java/org/apache/catalina/session/LocalStrings.properties
+++ b/java/org/apache/catalina/session/LocalStrings.properties
@@ -32,10 +32,12 @@ JDBCStore.checkConnectionDBReOpenFail=The re-open on the database failed. The da
 JDBCStore.checkConnectionSQLException=A SQL exception occurred {0}
 JDBCStore.checkConnectionClassNotFoundException=JDBC driver class not found {0}
 managerBase.complete=Seeding of random number generator has been completed
+managerBase.contextNull=The Container must be set to a non-null Context instance before the Manager is used
 managerBase.getting=Getting message digest component for algorithm {0}
 managerBase.gotten=Completed getting message digest component
 managerBase.random=Exception initializing random number generator of class {0}
 managerBase.seeding=Seeding random number generator class {0}
+managerBase.setContextNotNew=It is illegal to call setContext() to change the Context associated with a Manager if the Manager is not in the NEW state
 serverSession.value.iae=null value
 standardManager.alreadyStarted=Manager has already been started
 standardManager.createSession.ise=createSession: Too many active sessions
