Expand the session attribute filtering options - new option to filter based on implementation class of value - new option to log a warning message if an attribute is filtered out - always log a message at at least debug level if an attribute is filtered out
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1727166 13f79535-47bb-0310-9956-ffa450edef68

--- a/java/org/apache/catalina/session/LocalStrings.properties
+++ b/java/org/apache/catalina/session/LocalStrings.properties
@@ -37,6 +37,8 @@ managerBase.getting=Getting message digest component for algorithm {0}
 managerBase.gotten=Completed getting message digest component
 managerBase.random=Exception initializing random number generator of class {0}
 managerBase.seeding=Seeding random number generator class {0}
+managerBase.sessionAttributeNameFilter=Skipped session attribute named [{0}] because it did not match the name filter [{1}]
+managerBase.sessionAttributeValueClassNameFilter=Skipped session attribute named [{0}] because the value type [{1}] did not match the filter [{2}]
 managerBase.setContextNotNew=It is illegal to call setContext() to change the Context associated with a Manager if the Manager is not in the NEW state
 serverSession.value.iae=null value
 standardManager.alreadyStarted=Manager has already been started
