Correct a false positive warning for ThreadLocal related memory leaks when the key class but not the value class has been loaded by the web application class loader.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1734141 13f79535-47bb-0310-9956-ffa450edef68

--- a/java/org/apache/catalina/loader/LocalStrings.properties
+++ b/java/org/apache/catalina/loader/LocalStrings.properties
@@ -49,6 +49,7 @@ webappClassLoader.clearThreadLocal=The web application [{0}] created a ThreadLoc
 webappClassLoader.clearThreadLocalDebugClear=To simplify the process of tracing memory leaks, the key has been forcibly removed.
 webappClassLoader.clearThreadLocalClear=To prevent a memory leak, the ThreadLocal has been forcibly removed.
 webappClassLoader.clearThreadLocalFail=Failed to clear ThreadLocal references for web application [{0}]
+webappClassLoader.clearThreadLocalNone=The web application [{0}] created a ThreadLocal with key of type [{1}] (value [{2}]) and a value of type [{3}] (value [{4}]). Since keys are only weakly held by the ThreadLocal Map this is not a memory leak.
 webappClassLoader.clearThreadLocal.badKey=Unable to determine string representation of key of type [{0}]
 webappClassLoader.clearThreadLocal.badValue=Unable to determine string representation of value of type [{0}]
 webappClassLoader.clearThreadLocal.unknown=Unknown
