--- a/java/org/apache/tomcat/util/net/jsse/res/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/net/jsse/res/LocalStrings.properties
@@ -21,6 +21,7 @@ jsse.requested_ciphers_not_supported=None of the ciphers specified are supported
 jsse.enableable_ciphers=Specified SSL ciphers that are supported and enableable are : {0}
 jsse.unsupported_ciphers=Some specified SSL ciphers are not supported by the SSL engine : {0}
 jsse.unsupportedProtocol=The specified SSL protocol [{0}] is not supported
+jsse.excludeDefaultCipher=The SSL cipher [{0}] which is enabled by default in this JRE was excluded from the defaults used by Tomcat
 jsse.excludeDefaultProtocol=The SSL protocol [{0}] which is enabled by default in this JRE was excluded from the defaults used by Tomcat
 jsse.noDefaultCiphers=Unable to determine a default for ciphers. Set an explicit value to ensure the connector can start.
 jsse.noDefaultProtocols=Unable to determine a default for sslEnabledProtocols. Set an explicit value to ensure the connector can start.
