Stricter validation of HTTP method names
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1743650 13f79535-47bb-0310-9956-ffa450edef68

--- a/java/org/apache/coyote/http11/LocalStrings.properties
+++ b/java/org/apache/coyote/http11/LocalStrings.properties
@@ -62,5 +62,5 @@ http11processor.sendfile.error=Error sending data using sendfile. May be caused 
 
 iib.eof.error=Unexpected EOF read on the socket
 iib.requestheadertoolarge.error=Request header is too large
-iib.invalidmethod=Invalid character (CR or LF) found in method name
+iib.invalidmethod=Invalid character found in method name. HTTP method names must be tokens
 
