Fix https://bz.apache.org/bugzilla/show_bug.cgi?id=59904 Add a limit (default 200) for the number of cookies allowed per request. Based on a patch by gehui.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1756037 13f79535-47bb-0310-9956-ffa450edef68

--- a/java/org/apache/tomcat/util/http/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/http/LocalStrings.properties
@@ -25,4 +25,6 @@ parameters.multipleDecodingFail=Character decoding failed. A total of [{0}] fail
 parameters.noequal=Parameter starting at position [{0}] and ending at position [{1}] with a value of [{0}] was not followed by an '=' character
 parameters.fallToDebug=\n Note: further occurrences of Parameter errors will be logged at DEBUG level.
 
-headers.maxCountFail=More than the maximum allowed number of headers ([{0}]) were detected.
+cookies.maxCountFail=More than the maximum allowed number of cookies, [{0}], were detected.
+
+headers.maxCountFail=More than the maximum allowed number of headers, [{0}], were detected.
