Update command line parameter
git-svn-id: https://svn.apache.org/repos/asf/tomcat/tc6.0.x/trunk@1763791 13f79535-47bb-0310-9956-ffa450edef68

--- a/java/org/apache/catalina/loader/LocalStrings.properties
+++ b/java/org/apache/catalina/loader/LocalStrings.properties
@@ -34,7 +34,7 @@ virtualWebappLoader.token.glob.dir=Listing files in a directory: [{0}]
 virtualWebappLoader.token.notDirectory=Path is skipped, because it does not exist or is not a directory: [{0}]
 virtualWebappLoader.token.notExists=Path is skipped, because it does not exist: [{0}]
 virtualWebappLoader.token.notFile=Path is skipped, because it does not exist or is not a file: [{0}]
-webappClassLoader.addExports=When running on Java 9 you need to add "-XaddExports:java.rmi/sun.rmi.transport=ALL-UNNAMED" to the JVM command line arguments to enable RMI Target memory leak detection. Alternatively, you can suppress this warning by disabling RMI Target memory leak detection.
+webappClassLoader.addExports=When running on Java 9 you need to add "--add-exports java.rmi/sun.rmi.transport=ALL-UNNAMED" to the JVM command line arguments to enable RMI Target memory leak detection. Alternatively, you can suppress this warning by disabling RMI Target memory leak detection.
 webappClassLoader.illegalJarPath=Illegal JAR entry detected with name {0}
 webappClassLoader.jdbcRemoveFailed=JDBC driver de-registration failed for web application [{0}]
 webappClassLoader.jdbcRemoveStreamError=Exception closing input stream during JDBC driver de-registration for web application [{0}]
